# TwitchBot

./: .gitignore  README.md  docker-compose.yaml  main.py  mysql.cnf  pyproject.toml  settings.py
cmds/: __init__.py  kav.py  party.py  ping.py  responder.py  rpishop.py  social_links.py  zvute.py
cogs/: responder.py
db/: db_operations.py  models.py
db/migrations/: 0001_initial.py  0002_twitchusers.py  0003_twitchidtouser_alter_twitchusers_id.py  0004_alter_twitchusers_msg_count.py  0005_alter_twitchusers_first_watch_and_more.py  0005_remove_twitchusers_id_twitchusers_twitch_id_and_more.py  0006_alter_twitchusers_twitch_id_and_more.py
utils/: coffee.py  log.py  messages.py  utils.py  zvute.py
