[tool.poetry]
name = "django-orm"
version = "0.1.0"
description = ""
authors = ["Leemosh"]
readme = "README.md"
packages = [{include = "django_orm"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
twitchio = "^2.6.0"
python-dotenv = "^1.0.0"
ipdb = "^0.13.13"
mysqlclient = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
