[tool.poetry]
name = "django-orm"
version = "0.1.0"
description = ""
authors = ["Leemosh"]
readme = "README.md"
packages = [{include = "django_orm"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"
ipdb = "^0.13.13"
mysqlclient = "^2.1.1"
asyncio = "^3.4.3"
requests = "^2.28.2"
pyp100 = "^0.1.2"
twitchio = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
